--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,8 @@ body {
 
 .titulo-secundario {
   color: #fff;
-  font-size: 24px;
+  font-size: 30px;
+  margin-bottom: 20px;
 }
 
 .progreso {
@@ -110,6 +111,10 @@ canvas {
   font-size: 24px;
   padding: 10px 20px;
   border-bottom: 1px solid #000;
+}
+
+.boton:active {
+  border-bottom: none !important;
 }
 
 .boton:hover {
